bin_PROGRAMS = MolDS
MolDS_SOURCES = Main.cpp base/MolDSException.cpp wrappers/Blas.cpp \
	wrappers/Lapack.cpp base/Utilities.cpp base/Enums.cpp \
	base/MathUtilities.cpp base/MallocerFreer.cpp \
	base/EularAngle.cpp base/Parameters.cpp base/atoms/Atom.cpp \
	base/atoms/Hatom.cpp base/atoms/Liatom.cpp \
	base/atoms/Catom.cpp base/atoms/Natom.cpp base/atoms/Oatom.cpp \
	base/atoms/Satom.cpp base/factories/AtomFactory.cpp \
	base/Molecule.cpp base/InputParser.cpp \
	base/GTOExpansionSTO.cpp base/RealSphericalHarmonicsIndex.cpp \
	base/loggers/MOLogger.cpp base/loggers/DensityLogger.cpp \
	base/loggers/HoleDensityLogger.cpp \
	base/loggers/ParticleDensityLogger.cpp cndo/Cndo2.cpp \
	indo/Indo.cpp zindo/ZindoS.cpp mndo/Mndo.cpp am1/Am1.cpp \
	am1/Am1D.cpp pm3/Pm3.cpp pm3/Pm3D.cpp pm3/Pm3Pddg.cpp \
	base/factories/ElectronicStructureFactory.cpp md/MD.cpp \
	mc/MC.cpp rpmd/RPMD.cpp nasco/NASCO.cpp \
	optimization/Optimizer.cpp optimization/ConjugateGradient.cpp \
	optimization/SteepestDescent.cpp optimization/BFGS.cpp \
	base/factories/OptimizerFactory.cpp base/MolDS.cpp \
	base/PrintController.h base/MolDSException.h base/Uncopyable.h \
	wrappers/Blas.h wrappers/Lapack.h base/Utilities.h \
	base/Enums.h base/MathUtilities.h base/MallocerFreer.h \
	base/EularAngle.h base/Parameters.h base/atoms/Atom.h \
	base/atoms/Hatom.h base/atoms/Liatom.h base/atoms/Catom.h \
	base/atoms/Natom.h base/atoms/Oatom.h base/atoms/Satom.h \
	base/factories/AtomFactory.h base/Molecule.h \
	base/InputParser.h base/GTOExpansionSTO.h \
	base/RealSphericalHarmonicsIndex.h base/loggers/MOLogger.h \
	base/loggers/DensityLogger.h base/loggers/HoleDensityLogger.h \
	base/loggers/ParticleDensityLogger.h \
	base/ElectronicStructure.h cndo/Cndo2.h \
	cndo/ReducedOverlapAOsParameters.h indo/Indo.h zindo/ZindoS.h \
	mndo/Mndo.h am1/Am1.h am1/Am1D.h pm3/Pm3.h pm3/Pm3D.h \
	pm3/Pm3Pddg.h base/factories/ElectronicStructureFactory.h \
	md/MD.h mc/MC.h rpmd/RPMD.h nasco/NASCO.h \
	optimization/Optimizer.h optimization/ConjugateGradient.h \
	optimization/SteepestDescent.h optimization/BFGS.h \
	base/factories/OptimizerFactory.h base/MolDS.h
